fix: Remove bottom margin from button container
The button container had some extra space on the
bottom, which was incorrect according to the
instruction of the exercise.

--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -26,7 +26,6 @@ body {
 
 .button-container {
   background: #e3f4ff;
-  margin-bottom: 8px;
   padding: 8px;
   text-align: center;
 }
